2008=06-07 Moved list of backends to rcsetup.py; made use of lower
           case for backend names consistent; use validate_backend
           when importing backends subpackage - EF

2008-06-06 hist() revision, applied ideas proposed by Erik Tollerud and
           Olle Engdegard: make histtype='step' unfilled by default
           and introduce histtype='stepfilled'; use default color
           cycle; introduce reverse cumulative histogram; new align
           keyword - MM

2008-06-06 Fix closed polygon patch and also provide the option to
           not close the polygon - MGD

2008-06-05 Fix some dpi-changing-related problems with PolyCollection,
           as called by Axes.scatter() - MGD

2008-06-05 Fix image drawing so there is no extra space to the right
           or bottom - MGD

2006-06-04 Added a figure title command subtitle as a Figure method
           and pyplot command -- see examples/figure_title.py - JDH

2008-06-02 Added support for log to hist with histtype='step' and fixed
           a bug for log-scale stacked histograms - MM

===============================================================
2008-05-29 Released 0.98.0 at revision 5314

2008-05-29 matplotlib.image.imread now no longer always returns RGBA
           -- if the image is luminance or RGB, it will return a MxN
           or MxNx3 array if possible.  Also uint8 is no longer always
           forced to float.

2008-05-29 Implement path clipping in PS backend - JDH

2008-05-29 Fixed two bugs in texmanager.py:
               improved comparison of dvipng versions
               fixed a bug introduced when get_grey method was added
           - DSD

2008-05-28 Fix crashing of PDFs in xpdf and ghostscript when two-byte
           characters are used with Type 3 fonts - MGD

2008-05-28 Allow keyword args to configure widget properties as
           requested in
           http://sourceforge.net/tracker/index.php?func=detail&aid=1866207&group_id=80706&atid=560722
           - JDH
